# cnn-hybrid-experiments-infra

./: .gitignore
.github/workflows/: ci.yml
apps/kaggle-upload/: Dockerfile  README.md  pyproject.toml
apps/kaggle-upload/app/: README.md  main.py  pyproject.toml
apps/kaggle-upload/app/application/: fetch_and_export.py
apps/kaggle-upload/app/domain/: __init__.py  gcs_storage_port.py  kaggle_service_port.py
apps/kaggle-upload/app/infrastructure/: __init__.py  gcs_storage.py  kaggle_service.py
infra/envs/: common.tfvars
infra/experiments/cnn-mlp/: versions.tf
infra/foundation/: main.tf  outputs.tf  variables.tf  versions.tf
infra/modules/experiment/: versions.tf
scripts/: 1_Step.sh  GCP_STEPS.md
